修改底部Tab栏为固定浮层形式

--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@
             </div>
         </div>
         
-        <!-- 底部Tab栏 -->
-        <div class="bg-white border-t border-gray-200 py-2">
+        <!-- 底部Tab栏 - 固定浮层 -->
+        <div class="fixed bottom-0 left-0 right-0 bg-white border-t border-gray-200 py-2 z-40 shadow-lg">
             <div class="flex justify-around">
                 <button class="tab-button active flex flex-col items-center px-4 py-2" data-tab="tasks">
                     <i class="fa fa-tasks text-xl text-secondary"></i>
